CSRF Token fix and backend hookup

--- a/dividesmart/main/templates/main/qr_code.html
+++ b/dividesmart/main/templates/main/qr_code.html
@@ -9,7 +9,8 @@
   <title>Index</title>
 </head>
 <body>
-	<div id="main"></div>
+  <div id="topbar" style="width:100%; height:10%"></div>
+  <div id="qr-code" style="width:80%; height:80%; padding-left:10%; padding-top:5%;"></div>
 </body>
 <script src="/static/bundle/main/qr_code.js"></script>
 
